--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,7 @@
     border-radius: 0 0 10px 10px;
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0) 0%);
     transition: 0.3s;
+    overflow: visible;
 }
 
 .card:hover figcaption {
